# art-gen

./: .gitignore  main.py  pyproject.toml  train_vae.py
configs/: vae-nano.yaml  vae.yaml
src/: config.py  data.py
src/model/: abstract.py  diffusion.py  dit.py  gan.py  resnet.py  util.py  vae.py
src/model/diffusion/: __init__.py  util.py
src/train/: abstract.py  flow_match.py  vae.py
