[tool.poetry]
name = "art-gen"
version = "0.1.0"
description = ""
authors = ["jwhowes <howesjacob8@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
transformers = "^4.47.1"
matplotlib = "^3.10.0"
accelerate = "^1.2.1"
datasets = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
